# integral-philosophy-web

./: README.md  pyproject.toml  requirements.txt  web_requirements.txt
src/: web_interface.py
src/integral_philosophy_web/: __init__.py  api_server.py  cli.py
templates/web_templates/: convert.html  index.html  job_status.html
